Additional tests Signed-off-by:Bart Hanssens <bart.hanssens@bosa.fgov.be>
